Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/generics/inference/8164399/T8164399b.out
T8164399b.java:17:10: compiler.err.unreported.exception.need.to.catch.or.throw: java.lang.Throwable&java.lang.Runnable
1 error
